# new-choreo-qa-gen

./: .env.example  .gitignore  config.yaml  csv_to_jsonl.py  data_versions.md  field_mappings.yaml  fmt-q-and-a-together-part-13-114qty.csv  fmt-q-and-a-together-part-13-114qty.jsonl  jsonl_to_csv.py  links.md  main.py  prompts.py  pyproject.toml  qa-gen_implicit-n-questions.py  qa-gen_simple-n-given-questions.py  qa-gen_topic-wise-n-given-questions.py  qa-gen_user-centric-questions.py  qa.py  simple_implicit_n_qa_results.csv  simple_implicit_n_qa_results_v2.csv  simple_implicit_n_qa_results_v2.jsonl  simple_n_given_results.csv  simple_qa_gen.py  test_llm_langchain.py  user_centric_qa_results_v1.csv  user_centric_qa_results_v2.csv  user_centric_results_v1.jsonl  user_centric_results_v2.jsonl
