[project]
name = "new-choreo-qa-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.64",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.22",
    "langchain[google-genai]>=0.3.25",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]
